# advent-of-code-2024

./: Cargo.toml
d01/: d01.rs
d02/: d02.rs
d03/: d03.rs
d04/: d04.rs
d05/: d05.rs
d06/: d06.rs
d07/: d07.rs
d08/: d08.rs
d09/: d09.rs
d10/: d10.rs
d11/: d11.rs
d12/: d12.rs
d13/: d13.rs
d14/: d14.rs
d15/: d15.rs
d16/: d16.rs
d17/: d17.rs  hm.asm
d18/: d18.rs
d19/: d19.rs
d20/: d20.rs  tmp.txt
src/: graph.rs  lib.rs  math.rs
