[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2024"

[lib]
name = "aoc2016"
path = "src/lib.rs"

[[bin]]
name = "d01"
path = "d01/d01.rs"

[[bin]]
name = "d02"
path = "d02/d02.rs"

[[bin]]
name = "d03"
path = "d03/d03.rs"

[[bin]]
name = "d04"
path = "d04/d04.rs"


[dependencies]
itertools = "0.14.0"
regex = { version = "1.12.2", features = ["pattern"] }
vecmath = "1.0.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
