[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2024"

[lib]
name = "aoc2016"
path = "src/lib.rs"

[[bin]]
name = "d01"
path = "d01/d01.rs"

[[bin]]
name = "d02"
path = "d02/d02.rs"

[[bin]]
name = "d03"
path = "d03/d03.rs"

[[bin]]
name = "d04"
path = "d04/d04.rs"

[[bin]]
name = "d05"
path = "d05/d05.rs"

[[bin]]
name = "d06"
path = "d06/d06.rs"

[[bin]]
name = "d07"
path = "d07/d07.rs"

[[bin]]
name = "d08"
path = "d08/d08.rs"

[[bin]]
name = "d09"
path = "d09/d09.rs"

[[bin]]
name = "d10"
path = "d10/d10.rs"

[[bin]]
name = "d11"
path = "d11/d11.rs"

[[bin]]
name = "d12"
path = "d12/d12.rs"

[[bin]]
name = "d13"
path = "d13/d13.rs"
required-features = ["good_lp"]

[[bin]]
name = "d14"
path = "d14/d14.rs"

[[bin]]
name = "d15"
path = "d15/d15.rs"

[[bin]]
name = "d16"
path = "d16/d16.rs"

[[bin]]
name = "d17"
path = "d17/d17.rs"

[dependencies]
good_lp = { version = "1.14.2", default-features = false, features = ["scip"], optional = true }
indicatif = "0.18.4"
itertools = "0.14.0"
lazy_static = "1.5.0"
nom = "8.0.0"
num = "0.4.3"
regex = { version = "1.12.2", features = ["pattern"] }
vecmath = "1.0.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
